mon multipler done

--- a/VoucherManagementSystem/Views/Shared/_Layout.cshtml
+++ b/VoucherManagementSystem/Views/Shared/_Layout.cshtml
@@ -77,6 +77,8 @@
                                 <li><a class="dropdown-item" asp-controller="Banks" asp-action="Index"><i class="bi bi-bank me-2 text-primary"></i>Banks</a></li>
                                 <li><a class="dropdown-item" asp-controller="ExpenseHeads" asp-action="Index"><i class="bi bi-cash-stack me-2 text-primary"></i>Expense Heads</a></li>
                                 <li><a class="dropdown-item" asp-controller="Projects" asp-action="Index"><i class="bi bi-briefcase me-2 text-primary"></i>Projects</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" asp-controller="MonMultiplier" asp-action="Index"><i class="bi bi-calculator me-2 text-primary"></i>Mon Multiplier</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
